--- a/MobileFrontEnd/tsconfig.json
+++ b/MobileFrontEnd/tsconfig.json
@@ -1,6 +1,17 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "paths": {
+      "@components/*": [
+        "./components/*"
+      ],
+      "@screens/*": [
+        "./screens/*"
+      ],
+      "@gStyle": [
+        "./style.ts"
+      ]
+    }
   }
 }
