added a header component with all the subcomponents and svg support

--- a/MobileFrontEnd/tsconfig.json
+++ b/MobileFrontEnd/tsconfig.json
@@ -9,6 +9,9 @@
       "@screens/*": [
         "./screens/*"
       ],
+      "@assets/*": [
+        "./assets/*"
+      ],
       "@gStyle": [
         "./style.ts"
       ]
