fixed inconsistencies after a merge

--- a/MobileFrontEnd/tsconfig.json
+++ b/MobileFrontEnd/tsconfig.json
@@ -14,7 +14,10 @@
       ],
       "@gStyle": [
         "./style.ts"
-      ]
+      ],
+      "@dbConn/*": [
+        "./DatabaseConn/*"
+      ],
     }
   }
 }
