--- a/MobileFrontEnd/package.json
+++ b/MobileFrontEnd/package.json
@@ -16,13 +16,16 @@
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-element-dropdown": "^2.10.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-svg": "^13.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/lodash": "^4.14.201",
     "@types/react": "~18.2.14",
     "react-native-svg-transformer": "^1.1.0",
     "typescript": "^5.1.3"
