--- a/WebFrontEnd/tsconfig.json
+++ b/WebFrontEnd/tsconfig.json
@@ -25,7 +25,7 @@
         "src/components/*"
       ],
       "@assets/*": [
-        "./src/assets/*"
+        "assets/*"
       ],
       "@gStyle": [
         "./src/style.css"
