--- a/WebFrontEnd/tsconfig.json
+++ b/WebFrontEnd/tsconfig.json
@@ -31,7 +31,7 @@
         "./src/style.css"
       ],
       "@dbConn/*": [
-        "./DatabaseConn/*"
+        "DatabaseConn/*"
       ],
       "@utils/*": [
         "./utils/*"
