--- a/WebFrontEnd/tsconfig.json
+++ b/WebFrontEnd/tsconfig.json
@@ -22,7 +22,7 @@
     "baseUrl": "src",
     "paths": {
       "@components/*": [
-        "src/components/*"
+        "components/*"
       ],
       "@assets/*": [
         "assets/*"
