started on mobile pages, breadcrumbs

--- a/MobileFrontEnd/tsconfig.json
+++ b/MobileFrontEnd/tsconfig.json
@@ -10,6 +10,9 @@
       "@components/*": [
         "./components/*"
       ],
+      "@interfaces": [
+        "./utils/interfaces.ts"
+      ],
       "@screens/*": [
         "./screens/*"
       ],
