--- a/WebFrontEnd/package.json
+++ b/WebFrontEnd/package.json
@@ -11,10 +11,15 @@
     "@types/node": "^16.18.61",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-instantsearch-core": "^6.26.10",
+    "algoliasearch": "^4.23.2",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-instantsearch": "^7.7.0",
+    "react-instantsearch-core": "^7.7.0",
+    "react-instantsearch-hooks-web": "^6.47.3",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
@@ -48,6 +53,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "dotenv": "^16.4.5"
   }
 }
