--- a/WebFrontEnd/package.json
+++ b/WebFrontEnd/package.json
@@ -21,6 +21,7 @@
     "react-instantsearch-core": "^7.7.0",
     "react-instantsearch-hooks-web": "^6.47.3",
     "react-query": "^3.39.3",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
