--- a/MobileFrontEnd/package.json
+++ b/MobileFrontEnd/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.0",
     "babel-plugin-module-resolver": "^5.0.0",
-    "expo": "~49.0.15",
+    "expo": "51.0.18",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
